--- a/src/app/admin/dashboard/contact/contact.component.html
+++ b/src/app/admin/dashboard/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="mt-5 mb-5">
-<button class="btn text-black mt-5" [routerLink]="['/dashboard']"><i class="fas fa-arrow-left"></i> Dashboard</button>
+<button class="btn text-black mt-5" [routerLink]="['/dashboard']"><i class="fas fa-arrow-left"></i> Home </button>
 </div>
 <div class="container text-center mb-5">
 <table id="customers" class="mb-5">
