--- a/src/app/core/product-feature/category/category.component.scss
+++ b/src/app/core/product-feature/category/category.component.scss
@@ -1,9 +1,51 @@
-.categories{
-    width: 50% ;
-    margin: auto;
-    margin-top: 100px;
+.category{
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
+.add {
+    font-weight: 600;
+    font-size: 13px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 12px 30px;
+    border-radius: 50px;
+    transition: 0.5s;
+    line-height: 1;
+    margin: 10px;
+    -webkit-animation-delay: 0.8s;
+    animation-delay: 0.8s;
+    border: 2px solid #ffb03b;
+  }
+  
+  .add:hover {
+    background: #ffb03b;
+    color: #fff !important;
+  }
+
+div, table, button{
+    font-size: 18px;    
+}
+td,th{
+    padding: 15px;
+}
+th{
+    background-color:#151414;
+    color: white;
 }
 
-button{
-    margin: 10px;
-}
+.nav-bg{
+    background-color:#151414;
+  }
+  .nav-link:hover {
+      background-color: #525252 !important;
+      color: #ffb03b !important;
+
+  }
+  
+  .nav-link i {
+      transition: all 1s
+  }
+  
+  .nav-link:hover i {
+      transform: rotate(360deg)
+  }
