--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -1,3 +1,26 @@
+.dash{
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.add {
+  font-weight: 600;
+  font-size: 13px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 12px 30px;
+  border-radius: 50px;
+  transition: 0.5s;
+  line-height: 1;
+  margin: 10px;
+  -webkit-animation-delay: 0.8s;
+  animation-delay: 0.8s;
+  border: 2px solid #ffb03b;
+}
+
+.add:hover {
+  background: #ffb03b;
+  color: #fff !important;
+}
 
 div, table, button{
     font-size: 18px;    
