--- a/src/app/core/product-feature/thanks-page/thanks-page.component.html
+++ b/src/app/core/product-feature/thanks-page/thanks-page.component.html
@@ -3,10 +3,10 @@
     <div class="wrapper-1">
        <div class="wrapper-2">
         <i class="fa-solid fa-envelope"></i>
-        <h1>Thank you!</h1>
+        <h2>Thank you!</h2>
          <p class="fw-5">for contacting us, we will reply promptly</p> 
          <p>once your message is received. </p>
-         <button class="go-home" routerLink="/home">
+         <button class="btn mt-5" routerLink="/home">
            home page
          </button>
        </div>
