--- a/src/app/core/product-feature/thanks-page/thanks-page.component.scss
+++ b/src/app/core/product-feature/thanks-page/thanks-page.component.scss
@@ -21,7 +21,7 @@ body{
 flex-direction: column;
 }
 i{
-    color:#FF5E14;
+    color:#ffb03b;
     font-size: 2550%;
 }
 .wrapper-2{
@@ -36,7 +36,7 @@ h1{
     font-size:4em;
     letter-spacing:3px;
   font-weight: 900;
-  color: #FF5E14;
+  color: #ffb03b;
   margin:0;
   margin-top: 40px;
   margin-bottom:40px;
@@ -46,7 +46,7 @@ h1{
   margin:0;
   font-size:1.6em;
   font-weight: 600 !important;
-  color:#FF5E14;
+  color:#ffb03b;
   font-family: 'Raleway', sans-serif;
   letter-spacing:1px;
   line-height: 1.5;
@@ -74,9 +74,10 @@ h1{
 
 
 @media (min-width:360px){
-  h1{
-    font-size:4.5em;
-  }
+h2{
+  font-size: 50px;
+  font-family: "Brush Script MT" !important;
+}
   .go-home{
     margin-bottom:20px;
   }
@@ -93,6 +94,24 @@ h1{
   margin:0 auto;
   margin-top:50px;
   }
+  .btn {
+    font-weight: 600;
+    font-size: 13px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 12px 30px;
+    border-radius: 50px;
+    transition: 0.5s;
+    line-height: 1;
+    margin: 0 10px;
+    -webkit-animation-delay: 0.8s;
+    animation-delay: 0.8s;
+    border: 2px solid #ffb03b;
+  }
   
+  .btn:hover {
+    background: #ffb03b;
+    color: #fff !important;
+  }
   
 }
