--- a/src/app/core/product-feature/checkout/checkout.component.html
+++ b/src/app/core/product-feature/checkout/checkout.component.html
@@ -1,5 +1,5 @@
 <header>
-  <h1 class="text-center my-5">Checkout</h1>
+  <h2 class="text-center my-5">Checkout</h2>
 </header>
 
 <main class="">
@@ -11,7 +11,7 @@
               <div class="row">
                   <div class="col-lg-10 offset-lg-1">
                       <div class="cart_container">
-                          <div class="cart_title">Shopping Cart</div>
+                          <h2 class="cart_title">Shopping Cart</h2>
                           <div class="cart_items"  *ngFor="let item of foods ">
                               <ul class="cart_list">
                                   <li class="cart_item clearfix">
@@ -22,12 +22,12 @@
                                               <div class="cart_item_text">{{item.name}}</div>
                                           </div>
                                           <div class="cart_item_quantity cart_info_col">
-                                              <div class="cart_item_title">Quantity</div>
-                                              <div class="cart_item_text">{{item.cartCounter}}</div>
+                                              <div class="cart_item_title ms-5">Quantity</div>
+                                              <div class="cart_item_text ms-5">{{item.cartCounter}}</div>
                                           </div>
                                           <div class="cart_item_price cart_info_col">
-                                              <div class="cart_item_title">Price</div>
-                                              <div class="cart_item_text">{{item.price}}</div>
+                                              <div class="cart_item_title mx-5">Price</div>
+                                              <div class="cart_item_text mx-5">{{item.price}}</div>
                                           </div>
                                           <div class="cart_item_total cart_info_col">
                                               <div class="cart_item_title">Total</div>
@@ -43,7 +43,7 @@
                                   <div  class="order_total_amount">{{totalPrice}}</div>
                               </div>
                           </div>
-                          <div class="cart_buttons"> <button type="button" class="button cart_button_clear" routerLink="/product/listing">Continue Shopping</button></div>
+                          <div class="cart_buttons mt-5"> <button type="button" class="btn" routerLink="/product/listing">Continue Shopping</button></div>
                       </div>
                   </div>
               </div>
@@ -74,7 +74,7 @@
                     </div>
                     <input type="hidden" name="total_price" class="form-control form-control-lg w-100 mx-auto"  ngModel>
                     <div class="text-end mt-5">
-                      <button type="submit" class="button cart_button_checkout float-right" >Pay Order</button>
+                      <button type="submit" class="btn" >Pay Order</button>
 
                     </div>
                   </form>
