--- a/src/app/core/product-feature/view-cart/view-cart.component.html
+++ b/src/app/core/product-feature/view-cart/view-cart.component.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-10 offset-lg-1">
                 <div class="cart_container">
-                  <div class="cart_title">Shopping Cart</div>
+                  <h2>Shopping Cart</h2>
                     <div class="cart_items"  *ngFor="let item of foods ">
                       <ul class="cart_list">
                           <li class="cart_item clearfix">
@@ -22,12 +22,12 @@
                                       <div class="cart_item_text">{{item.description}}</div>
                                   </div>
                                   <div class="cart_item_quantity cart_info_col">
-                                      <div class="cart_item_title">Quantity</div>
-                                      <div class="cart_item_text">{{item.cartCounter}}</div>
+                                      <div class="cart_item_title ms-5">Quantity</div>
+                                      <div class="cart_item_text  ms-5">{{item.cartCounter}}</div>
                                   </div>
                                   <div class="cart_item_price cart_info_col">
-                                      <div class="cart_item_title">Price</div>
-                                      <div class="cart_item_text">{{item.price}}</div>
+                                      <div class="cart_item_title mx-5">Price</div>
+                                      <div class="cart_item_text mx-5">{{item.price}}</div>
                                   </div>
                                   <div class="cart_item_total cart_info_col">
                                       <div class="cart_item_title">Total</div>
@@ -47,8 +47,8 @@
                     </div>
 
                     <div class="cart_buttons">
-                        <button type="button" class="button cart_button_clear" routerLink="/product/listing">Continue Shopping</button>
-                        <button type="button" class="button cart_button_checkout"  routerLink="/checkout" >Check Out</button>
+                        <button type="button" class="btn" routerLink="/product/listing">Continue Shopping</button>
+                        <button type="button" class="btn"  routerLink="/checkout" >Check Out</button>
                      </div>
                </div>
            </div>
