--- a/src/app/core/product-feature/view-cart/view-cart.component.scss
+++ b/src/app/core/product-feature/view-cart/view-cart.component.scss
@@ -13,36 +13,13 @@ body {
    background: #E0E0E0;
   color: #000000
 }
-
+h2 {
+  font-size: 50px;
+  font-family: "Brush Script MT" !important;
+}
 ul {
   list-style: none;
   margin-bottom: 0px
-}
-
-.button {
-  display: inline-block;
-  background: #ff5e14;
-  border-radius: 5px;
-  height: 48px;
-  -webkit-transition: all 200ms ease;
-  -moz-transition: all 200ms ease;
-  -ms-transition: all 200ms ease;
-  -o-transition: all 200ms ease;
-  transition: all 200ms ease
-}
-
-.button a {
-  display: block;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 48px;
-  color: #FFFFFF;
-  padding-left: 35px;
-  padding-right: 35px
-}
-
-.button:hover {
-  opacity: 0.8
 }
 
 .cart_section {
@@ -160,37 +137,23 @@ ul {
   text-align: right
 }
 
-.cart_button_clear {
+.btn {
+  font-weight: 600;
+  font-size: 13px;
+  letter-spacing: 1px;
   display: inline-block;
-  border: none;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 48px;
-  color: rgba(0, 0, 0, 0.5);
-  background: #FFFFFF;
-  border: solid 1px #b2b2b2;
-  padding-left: 35px;
-  padding-right: 35px;
-  outline: none;
-  cursor: pointer;
-  margin-right: 26px
+  padding: 12px 30px;
+  border-radius: 50px;
+  transition: 0.5s;
+  line-height: 1;
+  margin: 0 10px;
+  -webkit-animation-delay: 0.8s;
+  animation-delay: 0.8s;
+  border: 2px solid #ffb03b;
 }
 
-.cart_button_clear:hover {
-  border-color: #ff5e14;
-  color: #595C5F;
+.btn:hover {
+  background: #ffb03b;
+  color: #fff !important;
 }
 
-.cart_button_checkout {
-  display: inline-block;
-  border: none;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 48px;
-  color: #FFFFFF;
-  padding-left: 35px;
-  padding-right: 35px;
-  outline: none;
-  cursor: pointer;
-  vertical-align: top
-}
