--- a/src/app/core/product-feature/paid/paid.component.html
+++ b/src/app/core/product-feature/paid/paid.component.html
@@ -1,11 +1,12 @@
 <div class="content" style="height: 70vh;">
     <div class="wrapper-1">
       <div class="wrapper-2">
-        <h1>Thank you !</h1>
-        <p>Thanks for subscribing to our Resturant. </p>
-        <p>you should receive a confirmation email soon</p>
-        <p>you will recieve the order during  {{arrival}} </p>
-        <button class="go-home"  routerLink="/home">
+        <h2>Thank you !</h2>
+        <p class="fs-4">Thanks for subscribing to our Resturant. <br> 
+          you should receive a confirmation email soon <br>
+          you will recieve the order during  {{arrival}} 
+        </p>
+        <button class="btn text-black mt-5"  routerLink="/home">
         go home
         </button>
       </div>
