--- a/src/app/core/product-feature/paid/paid.component.scss
+++ b/src/app/core/product-feature/paid/paid.component.scss
@@ -1,61 +1,74 @@
-  .wrapper-1{
-    width:100%;
-    height:100vh;
+  .wrapper-1 {
+    width: 100%;
+    height: 100vh;
     display: flex;
-  flex-direction: column;
-  margin-top:20% !important;
+    flex-direction: column;
+    margin-top: 20% !important;
   }
-  .wrapper-2{
-    padding :30px;
-    text-align:center;
+
+  .wrapper-2 {
+    padding: 30px;
+    text-align: center;
 
   }
-  h1{
-      font-family: 'Kaushan Script', cursive;
-    font-size:4em;
-    letter-spacing:3px;
-    color:#FF5E14 ;
-    margin:0;
-    margin-bottom:20px;
+
+  h2 {
+    font-size: 50px;
+    font-family: "Brush Script MT" !important;
   }
-  .wrapper-2 p{
-    margin:0;
-    font-size:1.3em;
-    color:#aaa;
+
+  .wrapper-2 p {
+    margin: 0;
+    font-size: 1.3em;
+    color: #aaa;
     font-family: 'Source Sans Pro', sans-serif;
-    letter-spacing:1px;
+    letter-spacing: 1px;
   }
-  .go-home{
-    color:#fff;
-    background:#FF5E14;
-    border:none;
-    padding:10px 50px;
-    margin:30px 0;
-    border-radius:30px;
-    text-transform:capitalize;
-    box-shadow: 0 10px 16px 1px rgba(174, 199, 251, 1);
+
+  .btn {
+    font-weight: 600;
+    font-size: 13px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    display: inline-block;
+    padding: 12px 30px;
+    border-radius: 50px;
+    transition: 0.5s;
+    line-height: 1;
+    margin: 0 10px;
+    -webkit-animation-delay: 0.8s;
+    animation-delay: 0.8s;
+    color: black;
+    border: 2px solid #ffb03b;
   }
-  
-  @media (min-width:360px){
-    h1{
-      font-size:4.5em;
+
+  .btn:hover {
+    background: #ffb03b;
+    color: #fff !important;
+  }
+
+  @media (min-width:360px) {
+    h1 {
+      font-size: 4.5em;
     }
-    .go-home{
-      margin-bottom:20px;
+
+    .go-home {
+      margin-bottom: 20px;
     }
   }
-  
-  @media (min-width:600px){
-    .content{
-    max-width:1000px;
-    margin:0 auto;
-  }
-    .wrapper-1{
-    height: initial;
-    max-width:620px;
-    margin:0 auto;
-    margin-top:50px;
-    box-shadow: 4px 8px 40px 8px rgba(88, 146, 255, 0.2);
-  }
-    
+
+  @media (min-width:600px) {
+    .content {
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
+    .wrapper-1 {
+      height: initial;
+      max-width: 620px;
+      margin: 0 auto;
+      margin-top: 50px;
+      box-shadow: 4px 8px 40px 8px rgba(88, 146, 255, 0.2);
+    }
+
   }
