--- a/src/app/admin/dashboard/order/order.component.html
+++ b/src/app/admin/dashboard/order/order.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <button class="btn text-black mb-5" [routerLink]="['/dashboard']"><i class="fas fa-arrow-left"></i> Home</button>
       <div class="row ">
-          <div class="col-lg-6">
+          <div class="col-lg-5">
             <table class="margin"><tr>
               <th>
               <div class="cart_item_quantity cart_info_col ms-5 text-center">
@@ -44,7 +44,7 @@
             </tr>
               </table>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-4">
               <table class="margin-r">
                 <tr>
                  <th><div class="cart_item_name cart_info_col ms-5 text-center">
@@ -56,13 +56,6 @@
                 <th><div class="cart_item_name cart_info_col ms-5 text-center">
                   <div class="cart_item_title">UserName</div>
                 </div></th>
-                <th><div class="cart_item_name cart_info_col ms-5 text-center">
-                  <div class="cart_item_title">UserAddress</div>
-                </div></th>
-                <th><div class="cart_item_name cart_info_col ms-5 text-center">
-                  <div class="cart_item_title">UserPhone</div>
-                </div></th>
-
               </tr>
             <tr *ngFor="let ordr of order"  >
 
@@ -75,15 +68,40 @@
             <td class="ms-5 space text-center">
               {{ordr.User.User_Name}}
             </td>
-            <td class="ms-5 space text-center">
-              {{ordr.User.User_Address}}
-            </td>
-            <td class="ms-5 space text-center">
-              {{ordr.User.User_Phone}}
+              </tr>
+              </table>
+            </div>
+            <div class="col-lg-1">
+              <table class="margin-rr">
+                <tr>
+                <th><div class="cart_item_name cart_info_col ms-5 text-center">
+                  <div class="cart_item_title">UserPhone</div>
+                </div></th>
+
+              </tr>
+            <tr *ngFor="let phone of phones"  >
+            <td class="ms-5 space2 text-center">
+              {{phone}}
             </td>
               </tr>
               </table>
             </div>
+            <div class="col-lg-1">
+              <table class="margin-rr">
+                <tr>
+                <th><div class="cart_item_name cart_info_col ms-5 text-center">
+                  <div class="cart_item_title">UserAddress</div>
+                </div></th>
+              </tr>
+            <tr *ngFor="let address of addresses"  >
+            <td class="ms-5 space2 text-center">
+              {{address}}
+            </td>
+              </tr>
+              </table>
             </div>
+
+            </div>
+
             </div>
             </div>
