--- a/src/app/admin/register/register.component.html
+++ b/src/app/admin/register/register.component.html
@@ -16,21 +16,21 @@
               <div class="form-group">
                 <label class="form-control-label w-50 mx-auto"><span class="fas fa-user"></span> Full Name</label>
                 <input type="text" class="form-control w-50 mx-auto" name="name" ngModel>
-                <p class="text-danger text-center fs-5" *ngIf="errors.name">{{errors.name}}</p>
+                <!-- <p class="text-danger text-center fs-5" *ngIf="errors.name">{{errors.name}}</p> -->
               </div>
 
 
               <div class="form-group">
                 <label class="form-control-label w-50 mx-auto"><span class="fas fa-envelope"></span> Email</label>
                 <input type="text" class="form-control w-50 mx-auto" name="email" ngModel>
-                <p class="text-danger text-center fs-5 " *ngIf="errors.email">{{errors.email}}</p>
+                <!-- <p class="text-danger text-center fs-5 " *ngIf="errors.email">{{errors.email}}</p> -->
               </div>
 
 
               <div class="form-group">
                 <label class="form-control-label w-50 mx-auto"><span class="fas fa-lock"></span> Password</label>
                 <input type="password" class="form-control w-50 mx-auto" name="password" ngModel>
-                <p class="text-danger text-center fs-5" *ngIf="errors.password">{{errors.password}}</p>
+                <!-- <p class="text-danger text-center fs-5" *ngIf="errors.password">{{errors.password}}</p> -->
               </div>
 
               <div class="form-group">
