--- a/src/app/core/product-feature/paid/paid.component.html
+++ b/src/app/core/product-feature/paid/paid.component.html
@@ -3,8 +3,7 @@
       <div class="wrapper-2">
         <h2>Thank you !</h2>
         <p class="fs-4">Thanks for subscribing to our Resturant. <br> 
-          you should receive a confirmation email soon <br>
-          you will recieve the order during  {{arrival}} 
+          Check your mail 
         </p>
         <button class="btn text-black mt-5"  routerLink="/home">
         go home
